--- a/ProjectPRN/Pages/View/Home.cshtml
+++ b/ProjectPRN/Pages/View/Home.cshtml
@@ -66,7 +66,7 @@
         </div>
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="" class="text-decoration-none">
+                <a href="/home" class="text-decoration-none">
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">Hanami</span>Shop</h1>
                 </a>
             </div>
@@ -109,7 +109,7 @@
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                         @foreach(Genre genre in Model.Genres)
                         {
-                            <a href="/shop/gid=@genre.GenreId" class="nav-item nav-link">@genre.GenreName</a>
+                            <a href="/shop?gid=@genre.GenreId" class="nav-item nav-link">@genre.GenreName</a>
                         }
                         
                      
