--- a/ProjectPRN/Pages/View/Cart.cshtml
+++ b/ProjectPRN/Pages/View/Cart.cshtml
@@ -128,15 +128,24 @@
                                 <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="/cart" class="dropdown-item">Shopping Cart</a>
-                                    <a href="/checkout" class="dropdown-item">Checkout</a>
+                                    <a href="/checkout" class="dropdown-item">Info</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="/history" class="nav-item nav-link">History</a>
+                            @if (Model.Users != null)
+
+                            {
+                                @if (Model.Users.Role.Equals("admin"))
+                                {
+                                    <a href="/admin" class="nav-item nav-link">Admin Page</a>
+                                }
+
+                            }
                         </div>
                         <div class="navbar-nav ml-auto py-0">
                             @if (Model.Users != null)
                             {
-                                <a href="" class="nav-item nav-link">@Model.Users.Username</a>
+                                <a href="/checkout" class="nav-item nav-link">@Model.Users.Username</a>
                                 <a href="/login?handler=Logout" class="nav-item nav-link">Logout</a>
                             }
                             @if (Model.Users == null)
@@ -211,7 +220,7 @@
                                         </div>
                                     </td>
                                     <td class="align-middle">@(order.Book.Price * order.Quantity)</td>
-                                    <td class="align-middle"><a href="/cart?handler=DeleteCart&odid=@order.OrderDetailId"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></a></td>
+                                    <td class="align-middle"><a href="/cart?handler=DeleteCart&odid=@order.OrderDetailId"> <button type="button" class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button> </a></td>
                                 </tr>
                                 }
 
