--- a/ProjectPRN/Pages/View/Contact.cshtml
+++ b/ProjectPRN/Pages/View/Contact.cshtml
@@ -1,5 +1,5 @@
-﻿@page "/checkout"
-@model ProjectPRN.Pages.View.CheckOutModel
+﻿@page "/history"
+@model ProjectPRN.Pages.View.ContactModel
 @{
 }
 @using ProjectPRN.Models
@@ -121,7 +121,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="/home" class="nav-item nav-link active">Home</a>
+                            <a href="/home" class="nav-item nav-link">Home</a>
                             <a href="/shop" class="nav-item nav-link">Shop</a>
                             <a href="/detail" class="nav-item nav-link">Shop Detail</a>
                             <div class="nav-item dropdown">
@@ -131,7 +131,7 @@
                                     <a href="/checkout" class="dropdown-item">Info</a>
                                 </div>
                             </div>
-                            <a href="/history" class="nav-item nav-link">History</a>
+                            <a href="/history" class="nav-item nav-link active">History</a>
                             @if (Model.Users != null)
 
                             {
@@ -153,6 +153,7 @@
                                 <a href="/login" class="nav-item nav-link">Login</a>
                                 <a href="/register" class="nav-item nav-link">Register</a>
                             }
+
                         </div>
                     </div>
                 </nav>
@@ -163,111 +164,107 @@
     <!-- Page Header Start -->
     <div class="container-fluid bg-secondary mb-5">
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 300px">
-            <h1 class="font-weight-semi-bold text-uppercase mb-3">Checkout</h1>
+            <h1 class="font-weight-semi-bold text-uppercase mb-3">Contact Us</h1>
             <div class="d-inline-flex">
                 <p class="m-0"><a href="">Home</a></p>
                 <p class="m-0 px-2">-</p>
-                <p class="m-0">Checkout</p>
+                <p class="m-0">Contact</p>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
-    <!-- Checkout Start -->
+    <!-- Contact Start -->
     <div class="container-fluid pt-5">
+        <div class="text-center mb-4">
+            <h2 class="section-title px-5"><span class="px-2">History</span></h2>
+        </div>
+        <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Modal Content Goes Here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
         <div class="row px-xl-5">
-            @if (Model.Users == null)
+            @if (Model.OrderDetails == null)
             {
-                <h1> hay dang nhap de xem thong tin ca nhan</h1>
+                @if (Model.Orders == null)
+                {
+                    <h1>Hay dang nhap de tiep tuc</h1>
+                }
+                @if (Model.Orders != null)
+                {
+                    <table class="table">
+                        <thead>
+                            <tr class="table-danger">
+
+                                <th scope="col">Date</th>
+                                <th scope="col">Total</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (Order order in Model.Orders)
+                            {
+                                <tr>
+                                    <td>@order.OrderDate</td>
+                                    <td>@order.TotalAmount</td>
+                                    <td>@order.Status</td>
+                                    <td><a href="/history?odid=@order.OrderId"><button type="button" class="btn btn-primary">View</button></a></td>
+                                </tr>
+                            }
+
+
+                        </tbody>
+                    </table>
+                }
+                
             }
-            @if (Model.Users != null)
+            @if (Model.OrderDetails != null)
             {
-                <div class="col-lg-8">
-                    <div class="mb-4">
+                <table class="table">
+                    <thead>
+                        <tr class="table-danger">
 
-
-                        @if (Model.Message != null)
+                            <th scope="col">Book Title</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">SubTotal</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (OrderDetail order in Model.OrderDetails)
                         {
-                            <h1 style="color:green" >@Model.Message</h1>
+                            <tr>
+                                <td>@order.Book.Title</td>
+                                <td>@order.Quantity</td>
+                                <td>@order.Subtotal</td>
+                                
+                            </tr>
                         }
 
-                        <form method="post" asp-page-handler="ChangeInfo">
-                            <h4 class="font-weight-semi-bold mb-4">Billing Address</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-group">
-                                    <label>First Name</label>
-                                    <input class="form-control" type="text" asp-for="FirstName">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label>Last Name</label>
-                                    <input class="form-control" type="text" asp-for="LastName">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label>E-mail</label>
-                                    <input class="form-control" type="text" asp-for="Email">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label>Mobile No</label>
-                                    <input class="form-control" type="text" asp-for="Phone">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label>Address Line 1</label>
-                                    <input class="form-control" type="text" asp-for="Address">
-                                </div>
 
-                                <div class="col-md-12 form-group">
-                                    <div class="custom-control custom-checkbox">
-                                        <button type="submit" class="btn btn-warning"> Change info  </button>
-                                        @*  <input type="checkbox" class="custom-control-input" id="newaccount">
-                                    <label class="custom-control-label" for="newaccount">Create an account</label> *@
-                                    </div>
-                                </div>
-
-                            </div>
-                        </form>
-
-
-                    </div>
-
-                </div>
-                <div class="col-lg-4">
-                    <form method="post" asp-page-handler="ChangePass">
-                        <div class="card border-secondary mb-5">
-                            <div class="card-header bg-secondary border-0">
-                                <h4 class="font-weight-semi-bold m-0">Change Password</h4>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="font-weight-medium mb-3">Products</h5>
-                                <div class="col-md-12 form-group">
-                                    <label>Current Password</label>
-                                    <input class="form-control" asp-for="Password" type="password">
-                                </div>
-                                <div class="col-md-12 form-group">
-                                    <label>New Password</label>
-                                    <input class="form-control"  id="password"  asp-for="NewPassword" type="password">
-                                </div>
-                                <div class="col-md-12 form-group">
-                                    <label>Re-New Password</label>
-                                    <input oninput="validatePassword()" class="form-control" id="confirmPassword" type="password">
-                                </div>
-
-                            </div>
-                            <h1 id="noti">@Model.NewMessage</h1>
-                            <div class="card border-secondary mb-5">
-
-                                <div class="card-footer border-secondary bg-transparent">
-                                    <button type="submit" id="btnRegister" class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Change Password</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-
-                </div>
-                }
-                </div>
-            
+                    </tbody>
+                </table>
+            }
+        </div>
     </div>
-    
-    <!-- Checkout End -->
+    <!-- Contact End -->
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
         <div class="row px-xl-5 pt-5">
@@ -340,6 +337,8 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
+    
+    
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -353,25 +352,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <!-- Thêm mã JavaScript trong thẻ <script> -->
-        <script>
-            function validatePassword() {
-            var password = document.getElementById("password").value;
-            var confirmPassword = document.getElementById("confirmPassword").value;
-
-            if (password !== confirmPassword) {
-                document.getElementById("confirmPassword").setCustomValidity("Passwords do not match");
-                document.getElementById("btnRegister").disabled = true;
-                document.getElementById("noti").innerHTML =" Passwords do not match";
-                 document.getElementById("noti").style.color="red";
-            } else {
-                document.getElementById("confirmPassword").setCustomValidity("");
-                document.getElementById("btnRegister").disabled = false;
-                document.getElementById("noti").innerHTML ="";
-            }
-        }
-        </script>
-
 </body>
 
 </html>
